--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
       </div>
     </div>
 
-    <script src="/assets/app.js"></script>
+    <script src="./assets/app.js"></script>
   </body>
 </html>
