--- a/course.html
+++ b/course.html
@@ -35,7 +35,7 @@
   <body>
     <div class="wiki-shell mx-auto px-4 py-6">
       <div class="d-flex align-items-center justify-content-between gap-3">
-        <a href="/" class="wiki-link text-sm">← Übersicht</a>
+        <a href="./" class="wiki-link text-sm">← Übersicht</a>
         <div class="d-flex gap-2">
           <a id="openYaml" class="btn btn-outline-secondary btn-sm" href="#" target="_blank" rel="noreferrer">YML</a>
         </div>
@@ -81,6 +81,6 @@
       </div>
     </div>
 
-    <script src="./assets/course.js"></script>
+    <script src="assets/course.js"></script>
   </body>
 </html>
