--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="assets/styles.css">
+    <link rel="stylesheet" href="Semester-Overview/assets/styles.css">
 
     <script src="https://cdn.jsdelivr.net/npm/js-yaml@4.1.0/dist/js-yaml.min.js"></script>
 
@@ -50,6 +50,6 @@
       </div>
     </div>
 
-    <script src="assets/app.js"></script>
+    <script src="Semester-Overview/assets/app.js"></script>
   </body>
 </html>
