--- a/course.html
+++ b/course.html
@@ -81,6 +81,6 @@
       </div>
     </div>
 
-    <script src="assets/course.js"></script>
+    <script src="course.js"></script>
   </body>
 </html>
